Fix panel z-index

--- a/src/styles/panel.scss
+++ b/src/styles/panel.scss
@@ -1,5 +1,6 @@
 .cli {
 	max-height: 64%;
+	z-index: 65535;
 
 	&-panel {
 		height: 0;
